--- a/upload.html
+++ b/upload.html
@@ -9,6 +9,8 @@
   <form action="http://127.0.0.1:8001/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="avatar" />
     <button type="submit">Upload</button>
+
+    <h2>Hello World</h2>
   </form>
 </body>
 </html>
